[gd_scene load_steps=5 format=3 uid="uid://ufo_enemy_scene_001"]

[ext_resource type="Script" path="res://scenes/gameplay/hazards/enemy_ufo.gd" id="1_ufo"]
[ext_resource type="PackedScene" uid="uid://bg8x3qv2wnxnp" path="res://scenes/components/health_component.tscn" id="2_health"]
[ext_resource type="PackedScene" uid="uid://cnb7uw3g8yjh5" path="res://scenes/components/movement_component.tscn" id="3_movement"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ufo"]
radius = 20.0

[node name="EnemyUFO" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_ufo")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.8, 0.2, 0.8, 1)

[node name="Polygon2D" type="Polygon2D" parent="Sprite2D"]
color = Color(0.8, 0.2, 0.8, 1)
polygon = PackedVector2Array(-15, -10, 15, -10, 20, 0, 15, 10, -15, 10, -20, 0)

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ufo")

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(25, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HealthComponent" parent="." instance=ExtResource("2_health")]
max_health = 50.0

[node name="MovementComponent" parent="." instance=ExtResource("3_movement")]
wrap_mode = 1
wrap_margin = 50.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
